<?xml version="1.0"?>

<!--
SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
SPDX-License-Identifier: Apache-2.0

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_deploy_converters</name>
  <version>4.5.0</version>
  <description>ROS 2 message converters and node wrappers for deploying neural network policies</description>
  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core libraries -->
  <depend>python3-torch-pip-shim</depend>
  <depend>python3-onnx-pip-shim</depend>
  <build_depend>cuda-toolkit</build_depend>
  <depend>isaac_deploy_core</depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>isaac_ros_deploy_interfaces</depend>
  <depend>isaac_ros_tensor_list_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Inference backend -->
  <exec_depend>isaac_ros_triton</exec_depend>

  <!-- Third-party -->
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
